examples/test/testpolicy7221.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7221
  namespace: namespace465
spec:
  podSelector:
    matchLabels:
      key35: value46
      key40: value34
      key27: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value45
      podSelector:
        matchLabels:
          key32: value27
          key27: value24
